# serializer version: 1
# name: TestPropertyTypes.test_data_warehouse_person_property_types
  '''
  
  SELECT persons__extended_properties.string_prop AS string_prop, persons__extended_properties.int_prop AS int_prop, accurateCastOrNull(transform(toString(persons__extended_properties.bool_prop), %(hogql_val_8)s, %(hogql_val_9)s, NULL), %(hogql_val_10)s) AS bool_prop
  FROM (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), person.version), 1) AS persons___properties___email, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS persons LEFT JOIN (
    SELECT extended_properties.string_prop AS string_prop, extended_properties.int_prop AS int_prop, extended_properties.bool_prop AS bool_prop, string_prop AS persons__extended_properties___string_prop
    FROM s3(%(hogql_val_3_sensitive)s, %(hogql_val_6_sensitive)s, %(hogql_val_7_sensitive)s, %(hogql_val_4)s, %(hogql_val_5)s) AS extended_properties) AS persons__extended_properties ON equals(persons.persons___properties___email, persons__extended_properties.persons__extended_properties___string_prop)
  WHERE ifNull(equals(bool_prop, 1), 0)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_group_boolean_property_types
  '''
  
  SELECT ifNull(equals(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_2)s, %(hogql_val_3)s, NULL), %(hogql_val_4)s), 1), 0), ifNull(equals(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_5)s, %(hogql_val_6)s, NULL), %(hogql_val_7)s), 0), 0), isNull(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_8)s, %(hogql_val_9)s, NULL), %(hogql_val_10)s))
  FROM events LEFT JOIN (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, %(hogql_val_1)s)), 1) AS properties___group_boolean, groups.group_type_index AS index, groups.group_key AS key
    FROM groups
    WHERE and(equals(groups.team_id, 420), equals(index, 0))
    GROUP BY groups.group_type_index, groups.group_key) AS events__group_0 ON equals(events.`$group_0`, events__group_0.key)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_group_boolean_property_types[new_events_schema]
  '''
  
  SELECT ifNull(equals(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_2)s, %(hogql_val_3)s, NULL), %(hogql_val_4)s), 1), 0), ifNull(equals(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_5)s, %(hogql_val_6)s, NULL), %(hogql_val_7)s), 0), 0), isNull(accurateCastOrNull(transform(toString(events__group_0.properties___group_boolean), %(hogql_val_8)s, %(hogql_val_9)s, NULL), %(hogql_val_10)s))
  FROM events_json AS events LEFT JOIN (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, %(hogql_val_1)s)), 1) AS properties___group_boolean, groups.group_type_index AS index, groups.group_key AS key
    FROM groups
    WHERE and(equals(groups.team_id, 420), equals(index, 0))
    GROUP BY groups.group_type_index, groups.group_key) AS events__group_0 ON equals(events.`$group_0`, events__group_0.key)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_group_property_types
  '''
  
  SELECT accurateCastOrNull(events__group_0.properties___inty, %(hogql_val_2)s) AS inty
  FROM events LEFT JOIN (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, %(hogql_val_1)s)), 1) AS properties___inty, groups.group_type_index AS index, groups.group_key AS key
    FROM groups
    WHERE and(equals(groups.team_id, 420), equals(index, 0))
    GROUP BY groups.group_type_index, groups.group_key) AS events__group_0 ON equals(events.`$group_0`, events__group_0.key)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_group_property_types[new_events_schema]
  '''
  
  SELECT accurateCastOrNull(events__group_0.properties___inty, %(hogql_val_2)s) AS inty
  FROM events_json AS events LEFT JOIN (
    SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, %(hogql_val_1)s)), 1) AS properties___inty, groups.group_type_index AS index, groups.group_key AS key
    FROM groups
    WHERE and(equals(groups.team_id, 420), equals(index, 0))
    GROUP BY groups.group_type_index, groups.group_key) AS events__group_0 ON equals(events.`$group_0`, events__group_0.key)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_combined
  '''
  
  SELECT multiply(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', ''), %(hogql_val_5)s), events__person.properties___tickets)
  FROM events LEFT OUTER JOIN (
    SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
    FROM person_distinct_id_overrides
    WHERE equals(person_distinct_id_overrides.team_id, 420)
    GROUP BY person_distinct_id_overrides.distinct_id
    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0)
    SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
    SELECT tupleElement(argMax(tuple(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s)), person.version), 1) AS properties___tickets, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, %(hogql_val_2)s), person.version), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_combined[new_events_schema]
  '''
  
  SELECT multiply(accurateCastOrNull(nullIf(nullIf(events.properties.`$screen_width`, ''), 'null'), %(hogql_val_4)s), events__person.properties___tickets)
  FROM events_json AS events LEFT OUTER JOIN (
    SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
    FROM person_distinct_id_overrides
    WHERE equals(person_distinct_id_overrides.team_id, 420)
    GROUP BY person_distinct_id_overrides.distinct_id
    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0)
    SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
    SELECT tupleElement(argMax(tuple(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s)), person.version), 1) AS properties___tickets, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, %(hogql_val_2)s), person.version), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event
  '''
  
  SELECT multiply(accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s), accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s)), accurateCastOrNull(transform(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', '')), %(hogql_val_5)s, %(hogql_val_6)s, NULL), %(hogql_val_7)s) AS bool
  FROM events
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event[new_events_schema]
  '''
  
  SELECT multiply(accurateCastOrNull(nullIf(nullIf(events.properties.`$screen_width`, ''), 'null'), %(hogql_val_0)s), accurateCastOrNull(nullIf(nullIf(events.properties.`$screen_height`, ''), 'null'), %(hogql_val_1)s)), accurateCastOrNull(transform(toString(if(notEquals(toJSONString(events.properties.^bool), '{}'), toJSONString(events.properties.^bool), if(isNull(events.properties.bool), NULL, if(startsWith(dynamicType(events.properties.bool), 'DateTime'), replaceOne(toString(events.properties.bool), ' ', 'T'), toString(events.properties.bool))))), %(hogql_val_2)s, %(hogql_val_3)s, NULL), %(hogql_val_4)s) AS bool
  FROM events_json AS events
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event_person_poe_off
  '''
  
  SELECT events__person.properties___provided_timestamp AS provided_timestamp
  FROM events LEFT OUTER JOIN (
    SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
    FROM person_distinct_id_overrides
    WHERE equals(person_distinct_id_overrides.team_id, 420)
    GROUP BY person_distinct_id_overrides.distinct_id
    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0)
    SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
    SELECT tupleElement(argMax(tuple(parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_1)s)), person.version), 1) AS properties___provided_timestamp, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, %(hogql_val_2)s), person.version), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event_person_poe_off[new_events_schema]
  '''
  
  SELECT events__person.properties___provided_timestamp AS provided_timestamp
  FROM events_json AS events LEFT OUTER JOIN (
    SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
    FROM person_distinct_id_overrides
    WHERE equals(person_distinct_id_overrides.team_id, 420)
    GROUP BY person_distinct_id_overrides.distinct_id
    HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0)
    SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
    SELECT tupleElement(argMax(tuple(parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_1)s)), person.version), 1) AS properties___provided_timestamp, person.id AS id
    FROM person
    WHERE equals(person.team_id, 420)
    GROUP BY person.id
    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, %(hogql_val_2)s), person.version), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1))))
    SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id)
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event_person_poe_on
  '''
  
  SELECT parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.person_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_1)s) AS provided_timestamp
  FROM events
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_event_person_poe_on[new_events_schema]
  '''
  
  SELECT parseDateTime64BestEffortOrNull(if(notEquals(toJSONString(events.person_properties.^provided_timestamp), '{}'), toJSONString(events.person_properties.^provided_timestamp), if(isNull(events.person_properties.provided_timestamp), NULL, if(startsWith(dynamicType(events.person_properties.provided_timestamp), 'DateTime'), replaceOne(toString(events.person_properties.provided_timestamp), ' ', 'T'), toString(events.person_properties.provided_timestamp)))), 6, %(hogql_val_0)s) AS provided_timestamp
  FROM events_json AS events
  WHERE equals(events.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_person
  '''
  
  SELECT accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s) AS tickets, parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_3)s) AS provided_timestamp, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', '') AS `$initial_browser`
  FROM person
  WHERE equals(person.team_id, 420)
  LIMIT 50000
  '''
# ---
# name: TestPropertyTypes.test_resolve_property_types_person_raw
  '''
  
  SELECT accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s) AS tickets, parseDateTime64BestEffortOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), 6, %(hogql_val_3)s) AS provided_timestamp, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_4)s), ''), 'null'), '^"|"$', '') AS `$initial_browser`
  FROM person
  WHERE equals(person.team_id, 420)
  LIMIT 50000
  '''
# ---
